<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_gravity="center"
        android:hint="@string/hint_put_password"
        android:textColor="@color/login_black"
        android:textColorHint="@color/login_black"
        android:layout_marginTop="354dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/login_id"
        android:layout_alignStart="@+id/login_id" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/login_id"
        android:layout_gravity="center_horizontal|top"
        android:hint="@string/hint_put_name"
        android:textColor="@color/login_black"
        android:textColorHint="@color/login_black"
        android:layout_alignBottom="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:onClick="login"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:id="@+id/create_user"
        android:layout_alignTop="@+id/login_button"
        android:layout_toRightOf="@+id/login_button"
        android:layout_toEndOf="@+id/login_button"
        android:onClick="createUser"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve_password"
        android:id="@+id/retrieve_button"
        android:layout_below="@+id/login_button"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:onClick="retrievePassword"/>
</RelativeLayout>


