<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="poulsen.obligatoriskopgvae.CreateUserActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/createUserName"
        android:hint="@string/hint_put_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:textColorHint="@color/login_black"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/createPassword"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/createUserName"
        android:layout_alignLeft="@+id/createUserName"
        android:layout_alignStart="@+id/createUserName"
        android:hint="@string/hint_put_password"
        android:textColorHint="@color/login_black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:id="@+id/create_user_button"
        android:layout_below="@+id/createPassword"
        android:layout_alignLeft="@+id/createPassword"
        android:layout_alignStart="@+id/createPassword"
        android:layout_marginTop="40dp"
        android:onClick="createUserActivityMethod"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backFromCreateUser"
        android:layout_alignTop="@+id/create_user_button"
        android:layout_alignRight="@+id/createPassword"
        android:layout_alignEnd="@+id/createPassword"
        android:onClick="backFromCreateUser"/>
</RelativeLayout>
